<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="action_settings">Settings</string>

    <string name="content_authority">com.agrotrading.kancher.moneytracker</string>
    <string name="sync_account_type">moneytracker.kancher.agrotrading.com</string>

    <string name="nav_drawer_expenses">Траты</string>
    <string name="nav_drawer_categories">Категории</string>
    <string name="nav_drawer_statistics">Статистика</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="nav_drawer_logout">Выход</string>
    <string name="my_name">Андрей Качур</string>
    <string name="my_email">tmnkach@mail.ru</string>
    <string name="content_description_avatar">avatar_circle_image</string>
    <string name="list_item_name">Name</string>
    <string name="list_item_sum">Sum</string>
    <string name="list_item_date">Date</string>
    <string name="progress_dialog_sync">Синхронизация…</string>
    <string name="statistics_fragment_description">Здесь будет статистика</string>
    <string name="settings_fragment_description">Здесь будут настройки</string>

    <string name="search_title">Поиск</string>

    <string name="add_expense">Добавить трату</string>
    <string name="add_expense_sum">Сумма</string>
    <string name="add_expense_comment">Примечание (макс. %d символов)</string>
    <string name="add_expense_category">Категория</string>
    <string name="add_category_field_title" translatable="false">Название категории (макс. %d символов)</string>
    <string name="add_category_title">Добавить категорию</string>
    <string name="add_expense_date">Дата</string>
    <string name="expense_date_format" translatable="false">%d.%s.%s</string>

    <string name="add_expense_grid_layout_column_count">2</string>

    <string name="date_format">yyyy.MM.dd</string>
    <string name="date_format_string" translatable="false">%s.%s.%s</string>

    <string name="add_button">Добавить</string>
    <string name="cancel_button">Отмена</string>

    <string name="error_required_field">Заполните поле</string>
    <string name="error_sum_field" translatable="false">Не более %d знаков(а) перед точкой, и %d после</string>


    <string name="user_registration">Регистрация</string>
    <string name="user_registration_field_login_hint">Логин</string>
    <string name="user_registration_field_password_hint">Пароль</string>
    <string name="user_registration_button_registration">Регистрация</string>
    <string name="user_registration_characters_long">Логин и пароль должны быть не менее 5 символов (и не более 10)</string>
    <string name="user_registration_login_busy_already">Такой логин уже существует</string>
    <string name="user_registration_other_error">Ошибка</string>

    <string name="network_not_available">Отсутствует подключение к сети :(</string>
    <string name="server_error">Ошибка синхронизации с сервером :(</string>
    <string name="connection_timeout">Тайм-аут соединения, попробуйте снова :(</string>
    <string name="wrong_login">Такого логина не существует</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="login_title">Вход</string>
    <string name="login">Войти</string>
    <string name="question_registration">Не зарегистрированы? Нажимайте сюда.</string>
    <string name="question_login">Уже зарегистрированы? Нажимайте сюда.</string>
    <string name="retry">Повторить</string>
    <string name="no_categories">Сначала нужно добавить категории</string>
    <string name="mini_logo">miniLogo</string>
    <string name="contextual_action_bar_title" translatable="false">Выбрано элементов: %d</string>

    <string name="default_text_hole">Общие затраты:\n</string>
    <string name="help_text_statistics">Для доп. информации нажмите на секцию</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Нотификация синхронизации</string>
    <string name="pref_enable_notifications_true">Включено</string>
    <string name="pref_enable_notifications_false">Выключено</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <!-- String for notification bar-->
    <string name="notification_message">Данные успешно синхронизированы!</string>
    <string name="pref_notification_section">Нотификации</string>

    <string name="pref_enable_sound_key" translatable="false">enable_notifications_sound</string>
    <string name="pref_enable_sound_label">Звук</string>

    <string name="pref_enable_vibrate_key" translatable="false">enable_notifications_vibrate</string>
    <string name="pref_enable_vibration_label">Вибрация</string>

    <string name="pref_enable_indicator_key" translatable="false">enable_notifications_indicator</string>
    <string name="pref_enable_indicator_label">Индикатор</string>


    <string name="title_dialog_logout">Выход из аккаунта</string>
    <string name="message_dialog_logout">Выход из аккаунта будет произведен после успешной синхронизации. Вы действительно хотите выйти?</string>
    <string name="message_dialog_logout_without_sync">Вы действительно хотите выйти из аккаунта?</string>
    <string name="sign_in_google_plus_button_text">Войти через аккаунт Google</string>
    <string name="circleAvatarDescription">circleAvatar</string>

</resources>
