<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_expenses"
            android:checked="true"
            android:icon="@mipmap/ic_account_balance_wallet_black_18dp"
            android:title="@string/nav_drawer_expenses"
            />
        <item
            android:id="@+id/drawer_categories"
            android:icon="@mipmap/ic_style_black_18dp"
            android:title="@string/nav_drawer_categories" />
        <item
            android:id="@+id/drawer_statistics"
            android:icon="@mipmap/ic_donut_large_black_18dp"
            android:title="@string/nav_drawer_statistics" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@mipmap/ic_settings_black_18dp"
            android:title="@string/nav_drawer_settings" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@mipmap/ic_exit_to_app_black_18dp"
            android:title="@string/nav_drawer_logout" />
    </group>

</menu>