<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/user_registration_fields_padding"
        android:paddingRight="@dimen/user_registration_fields_padding">

        <ImageView
            android:layout_width="@dimen/mini_logo_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mini_logo"
            android:focusable="false"
            android:src="@mipmap/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo_layout"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/user_registration_fields_padding"
        android:paddingRight="@dimen/user_registration_fields_padding">

        <EditText
            android:id="@+id/et_login"
            style="@style/UserRegistrationEditText"
            android:layout_above="@+id/et_password"
            android:hint="@string/user_registration_field_login_hint" />

        <EditText
            android:id="@+id/et_password"
            style="@style/UserRegistrationEditText"
            android:layout_above="@+id/login_button"
            android:hint="@string/user_registration_field_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            style="@style/UserRegistrationButton"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/button_margin_vertical"
            android:text="@string/login" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/SignInButton"
            android:layout_below="@+id/login_button"
            android:text="@string/sign_in_google_plus_button_text"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_registration_button"
            style="@style/QuestionRegistrationTextView"
            android:layout_below="@+id/sign_in_button"
            android:text="@string/question_registration" />

    </RelativeLayout>

</RelativeLayout>