<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_name"
        android:textSize="@dimen/list_item_text_size"/>

    <TextView
        android:id="@+id/sum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/list_item_sum"
        android:textSize="@dimen/list_item_text_size"
        android:layout_toLeftOf="@+id/date_text"
        android:layout_toStartOf="@+id/date_text"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/list_item_date"
        android:textSize="@dimen/list_item_text_size"/>
</RelativeLayout>