<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/user_registration_fields_padding"
        android:paddingRight="@dimen/user_registration_fields_padding"
        android:orientation="vertical"
        android:layout_centerVertical="true">


        <EditText
            style="@style/UserRegistrationEt"
            android:id="@+id/et_login"
            android:hint="@string/user_registration_field_login_hint"/>

        <EditText
            style="@style/UserRegistrationEt"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:hint="@string/user_registration_field_password_hint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:id="@+id/registration_button"
            android:text="@string/user_registration_button_registration"
            android:layout_marginTop="@dimen/button_margin_vertical" />

    </LinearLayout>

</RelativeLayout>